[metadata]
name = bcl
version = 3.0.0
author = Nth Party
author_email = team@nthparty.com
description = Python library that provides a simple interface for symmetric (i.e., secret-key) and asymmetric (i.e., public-key) encryption/decryption primitives.
long_description = file: README.rst
license = MIT
url = https://github.com/nthparty/bcl

[options]
zip_safe = False
package_dir =
    = src
python_requires = >=3.7
packages = find:
cmdclass =
    install = build.Install
    bdist_wheel = build.BdistWheel
install_requires =
    barriers~=1.1

[options.packages.find]
where=src

[options.package_data]
* = *.tmpl

[options.extras_require]
build = setuptools~=67.6; wheel~=0.37; pystache~=0.6; build~=0.10
docs = sphinx~=4.2.0; sphinx-rtd-theme~=1.0.0
test = pytest~=7.2; pytest-cov~=4.0
lint = pylint~=2.17.0
coveralls = coveralls~=3.3.1
publish = twine~=4.0

[bdist_wheel]
universal = 1
