[metadata]
name = bcl
version = 3.0.0
author = Nth Party
author_email = team@nthparty.com
description = Python library that provides a simple interface for symmetric (i.e., secret-key) and asymmetric (i.e., public-key) encryption/decryption primitives.
long_description = file: README.rst
license = MIT
url = https://github.com/nthparty/bcl

[options]
zip_safe = False
package_dir =
    = src
python_requires = >=3.9
packages = find:
cmdclass =
    install = bcl._sodium_build.Install
    bdist_wheel = bcl._sodium_build.BdistWheel

[options.packages.find]
where=src

[options.package_data]
* = *.tmpl

[options.extras_require]
build = setuptools>=77.0; wheel~=0.45; pystache~=0.6; build~=0.10
docs = sphinx~=7.4; sphinx-rtd-theme~=3.0
test = pytest~=8.2; pytest-cov~=5.0
lint = pylint~=3.3.0
coveralls = coveralls~=4.0
publish = twine~=4.0

[coverage:run]
omit = src/bcl/_sodium_build.py
